--- a/WebContent/assets/css/reset.css
+++ b/WebContent/assets/css/reset.css
@@ -87,4 +87,494 @@ html,body{_background-image:url(about:blank);_background-attachment:fixed;}
 .ie6fixedBR{position:absolute;left:expression(eval(document.documentElement.scrollLeft+document.documentElement.clientWidth-this.offsetWidth)-(parseInt(this.currentStyle.marginLeft,10)||0)-(parseInt(this.currentStyle.marginRight,10)||0));top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop,10)||0)-(parseInt(this.currentStyle.marginBottom,10)||0)))}
 
 
+/* common css */
+body {
+	width: 100%;
+	height: 100%;
+	min-width: 1100px;
+	text-align: center;
+}
+.bg {
+	width: 100%;
+}
+/* 导航开始 */
+.nav_container {
+	width: 100%;
+	background: rgb(24,24,24);
+	background: rgba(27,27,27,0.8);
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2;
+}
+.nav {
+	width: 1100px;
+	margin: 0 auto;
+	height: 72px;
+}
+.top_logo {
+	float: left;
+	margin-top: 10px;
+}
+.top_mess, .top_profile {
+	float: right;
+	height: 30px;
+	margin: 45px 0 0 30px;
+}
+.top_pass {
+	float: right;
+	height: 20px;
+	margin: 38px 0 0 30px;
+}
+.top_pass a {
+	font-size: 14px;
+	color: #dfdfdf;
+	margin: 0 5px;
+}
+.top_pass .top_pass_regi {
+	color:#44c8b0; 
+}
+.top_pass .line {
+	display: inline-block;
+	width: 2px;
+	height: 18px;
+	background: #dfdfdf;
+	vertical-align: text-bottom;
+}
+.top_mess a, .top_profile_link {
+	display: block;
+	height: 30px;
+	line-height: 30px;
+	color: #dfdfdf;
+	font-size: 14px;
+	padding-left: 38px;
+}
+.top_mess a {
+	background: url(../images/mess_icon.png) no-repeat;
+}
+.top_profile_link {
+	background: url(../images/profile_icon.png) no-repeat;
+}
+/* 搜索开始 */
+.top_search {
+	float: right;
+}
+.top-search-form {
+	position: relative;
+	width: 110px;
+	height: 30px;
+	margin-top: 34px;
+}
+.top-search-input {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 115px;
+	height: 100%;
+	border: none;
+	border-radius: 10px;
+	background: #626262;
+	color: #dfdfdf;
+	padding-left: 8px;
+	padding-right: 30px;
+	outline: none;
+	-o-transition: box-shadow .5s ease;
+	-webkit-transition: box-shadow .5s ease;
+	-moz-transition: box-shadow .5s ease;
+	transition: box-shadow .5s ease;
+	z-index: 2;
+}
+.top-search-input:focus {
+	box-shadow: 1px 0px 2px #44c8b0;
+}
+.top-search-input:focus ~ .search_link {
+	box-shadow: -1px 0px 2px #44c8b0;
+}
+.top-search-input:focus, .top-search-input:focus ~ .search_link{
+	-o-transition: box-shadow .5s ease;
+	-webkit-transition: box-shadow .5s ease;
+	-moz-transition: box-shadow .5s ease;
+	transition: box-shadow .5s ease;
+}
+.top-search-button {
+	position: absolute;
+	right: 8px;
+	bottom: 5px;
+	border: none;
+	width: 20px;
+	height: 20px;
+	background: url(../images/search_icon.png) no-repeat;
+	cursor: pointer;
+	opacity: 0.8;
+	-o-transition: opacity .5s ease;
+	-webkit-transition: opacity .5s ease;
+	-moz-transition: opacity .5s ease;
+	transition: opacity .5s ease;
+	z-index: 3;
+}
+.top-search-button:hover {
+	opacity: 1;
+	-o-transition: opacity .5s ease;
+	-webkit-transition: opacity .5s ease;
+	-moz-transition: opacity .5s ease;
+	transition: opacity .5s ease;
+}
+/* hover后搜素变长 */
+.top-search-form.active {
+	width: 185px;
+	-o-transition: width .5s ease;
+	-webkit-transition: width .5s ease;
+	-moz-transition: width .5s ease;
+	transition: width .5s ease;
+}
+.top-search-form.active .top-search-input {
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+/* 下拉框 */
+.search_link {
+	position: absolute;
+	top: 0;
+	left: 20px;
+	display: block;
+	width: 70px;
+	height: 30px;
+	padding-left: 10px;
+	line-height: 30px;
+	text-align: left;
+	font-size: 14px;
+	color: #dfdfdf;
+	border: none;
+	outline: none;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	-o-transition: left 1s ease;
+	-webkit-transition: left 1s ease;
+	-moz-transition: left 1s ease;
+	transition: left 1s ease;
+	z-index: 1;
+	background: #494949 url(../images/down.png) 53px center no-repeat;
+	cursor: pointer;
+}
+.search_link img {
+	margin-left: 5px;
+}
+.top-search-form.active .search_link {
+	left: 0;
+	-o-transition: left 1s ease;
+	-webkit-transition: left 1s ease;
+	-moz-transition: left 1s ease;
+	transition: left 1s ease;
+}
+/* 下拉框选择 */
+.search_choice {
+	display: none;
+	position: absolute;
+	top: 28px;
+	left: 2px;
+	background: #1a1a1a;
+	padding-bottom: 10px;
+	z-index: 3;
+}
+.search_choice li {
+	padding: 15px 10px 0;
+}
+.search_choice_link {
+	font-size: 14px;
+	color: #dfdfdf;
+}
 
+/* 菜单 */
+.top_nav {
+	float: left;
+	margin-left: 50px;
+}
+.top_menu {
+	position: relative;
+	float: left;
+	width: 110px;
+	list-style: none;
+	-o-transition: background .8s ease-out;
+	-webkit-transition: background .8s ease-out;
+	-moz-transition: background .8s ease-out;
+	transition: background .8s ease-out;
+}
+.top_menu:hover {
+	background: rgba(83, 83, 83, 0.77);
+	-o-transition: background .8s ease-out;
+	-webkit-transition: background .8s ease-out;
+	-moz-transition: background .8s ease-out;
+	transition: background .8s ease-out;
+}
+.top_menu_link {
+	display: block;
+	margin: 40px auto 0;
+	width: 63px;
+	padding-bottom: 14px;
+	text-align: center;
+	font-size: 18px;
+	color: #fff;
+}
+.top_menu_link:hover {
+	text-decoration: none;
+}
+.current .top_menu_link {
+	padding-bottom: 10px;
+	border-bottom: 4px solid #44c8b0;
+}
+.top_choice {
+	position: absolute;
+	top: 72px;
+	left: 0;
+	background: rgba(50, 50, 50, 0.75);
+	height: 0;
+	overflow: hidden;
+	-o-transition: all .5s ease;
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	transition: all .5s ease;
+	text-align: left;
+	z-index: 3;
+}
+.top_profile {
+	position: relative;
+}
+.top_profile .top_choice  {
+	top: 35px;
+	left: -2px;
+	background: rgba(27, 27, 27, 0.75);
+}
+/* 二级菜单 */
+.top_menu:hover .top_choice,.top_profile:hover .top_choice {
+	height: 64px;
+	padding: 10px 0;
+	-o-transition: all .5s ease;
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	transition: all .5s ease;
+}
+/* 相对于auto写死高度才有比较好的效果 */
+.top_menu:hover .top_choice.index {
+	height: 128px;
+}
+.top_profile:hover .top_choice  {
+	height: 96px;
+}
+.top_choice li {
+	width: 110px;
+	height: 32px;
+	line-height: 32px;
+}
+.top_choice li a {
+	padding-left: 25px;
+	font-size: 16px;
+	color: #dfdfdf;
+	-o-transition: color .5s ease;
+	-webkit-transition: color .5s ease;
+	-moz-transition: color .5s ease;
+	transition: color .5s ease;
+}
+.top_choice li a:hover {
+	color: #44c8b0;
+	text-decoration: none;
+	-o-transition: color .5s ease;
+	-webkit-transition: color .5s ease;
+	-moz-transition: color .5s ease;
+	transition: color .5s ease;
+}
+
+/*top*/
+#pagetop {
+	display: none;
+	width: 54px;
+	height: 54px;
+	position: fixed;
+	right: 30px;
+	bottom: 30px;
+	text-indent: -9999px;
+}
+#pagetop a {
+	background: url(../images/top.png) no-repeat;
+	width: 54px;
+	height: 54px;
+	display: block;
+	text-indent: -9999px;
+}
+/* 分页 */
+.paging {
+	margin: 45px 0;
+	text-align: center;
+}
+.paging a {
+	margin: 0 2px;
+}
+.paging .first_page, .paging .last_page {
+	margin: 0 10px;
+	font-size: 12px;
+	color: #fff;
+	background: #a0a0a0;
+	padding: 9px 6px;
+	border-radius: 100%;
+	-o-transition: background .5s ease;
+	-webkit-transition: background .5s ease;
+	-moz-transition: background .5s ease;
+	transition: background .5s ease;
+}
+.paging .first_page:hover, .paging  .last_page:hover {
+	background: #44c8b0;
+	text-decoration: none;
+	-o-transition: background .5s ease;
+	-webkit-transition: background .5s ease;
+	-moz-transition: background .5s ease;
+	transition: background .5s ease;
+}
+.page_num {
+	font-size: 16px;
+	color: #333;
+	padding: 5px 10px;
+}
+.page_num:hover {
+	color: #44c8b0;
+	text-decoration: none;
+}
+.page_num.current {
+	color: #44c8b0;
+	border-bottom: 1px solid #44c8b0;
+}
+.paging span {
+	vertical-align: top;
+}
+.paging .prev_page, .paging .next_page {
+	margin-left: 7px;
+	vertical-align: sub;
+}
+.paging .prev_page img, .paging .next_page img {
+	-o-transition: transform .5s ease;
+	-webkit-transition: transform .5s ease;
+	-moz-transition: transform .5s ease;
+	transition: transform .5s ease;
+}
+.prev_page {
+	padding-left: 3px;
+}
+.next_page {
+	padding-right: 3px;
+}
+.prev_page:hover img {
+	-ms-transform: translateX(-3px);
+	-moz-transform: translateX(-3px);
+	-webkit-transform: translateX(-3px);
+	-o-transform: translateX(-3px);
+	transform: translateX(-3px);
+}
+.next_page:hover img {
+	-ms-transform: translateX(3px);
+	-moz-transform: translateX(3px);
+	-webkit-transform: translateX(3px);
+	-o-transform: translateX(3px);
+	transform: translateX(3px);
+}
+.paging .prev_page:hover img, .paging .next_page:hover img {
+	-o-transition: transform .5s ease;
+	-webkit-transition: transform .5s ease;
+	-moz-transition: transform .5s ease;
+	transition: transform .5s ease;
+}
+
+
+/* 页脚 */
+.footer {
+	background: #323232;
+	padding: 50px 0;
+}
+.links {
+	width: 1100px;
+	margin: 0 auto;
+	border-bottom: 1px solid #535353;
+	padding-bottom: 15px;
+}
+.links a,.copying {
+	font-size: 16px;
+	color: #b0b0b0;
+	margin: 0 20px;
+}
+.copying {
+	margin-top: 20px;
+}
+
+/* 提示 */
+.tips {
+	display: none;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+}
+.tips span {
+	font-size: 12px;
+	color: #44c8b0;
+	padding: 5px;
+	border: 1px solid #44c8b0;
+	border-radius: 3px;
+}
+
+/* 动画 */
+@-webkit-keyframes fadeInDown {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(0,-65%,0);
+		transform: translate3d(0,-65%,0)
+	}
+	100% {
+		opacity: 0.5;
+		-webkit-transform: translate3d(0,-50%,0);
+		transform: translate3d(0,-50%,0)
+	}
+	100% {
+		opacity: 1;
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0)
+	}
+}
+
+@keyframes fadeInDown {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(0,-65%,0);
+		transform: translate3d(0,-65%,0)
+	}
+	100% {
+		opacity: 0.5;
+		-webkit-transform: translate3d(0,-50%,0);
+		transform: translate3d(0,-50%,0)
+	}
+	100% {
+		opacity: 1;
+		-webkit-transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0)
+	}
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */ 
+	color: #cfcfcf; 
+} 
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */ 
+	color: #cfcfcf; 
+} 
+::-moz-placeholder { /* Mozilla Firefox 19+ */ 
+	color: #cfcfcf; 
+} 
+:-ms-input-placeholder { /* Internet Explorer 10+ */ 
+	color: #cfcfcf; 
+} 
+
+
+/* 未登录 */
+#no_login .top_profile, #no_login .top_mess {
+	display: none;
+}
+
+/* 已登录 */
+#is_login .top_pass, #is_login .regi_login {
+	display: none;
+}
